# THM-MPM

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: FindMPI.cmake
include/: factory.h  hdf5_particle.h  mpi_datatypes.h
include/contact/: RigidFrictionalContactTwoPhase.h
include/elements/2d/: cubic_Bspline_element.h  cubic_Bspline_element.tcc
include/elements/3d/: hexahedron_element.tcc
include/functions/: sin_function.h  user_defined_function.h
include/io/: io_mesh.h  io_mesh_ascii.h  io_mesh_ascii.tcc  logger.h  vtk_writer.h
include/loads_bcs/: contact.h  heat_source.h  pore_pressure_constraint.h  temperature_constraint.h  traction.h  velocity_constraint.h
include/material/: BBM_frozen_soil.h  BBM_frozen_soil.tcc  MC_frozen_soil.h  MC_frozen_soil.tcc  bingham.h  bingham.tcc  cam_clay.h  cam_clay.tcc  linear_elastic.h  linear_elastic.tcc  material.h  mohr_coulomb.h  mohr_coulomb.tcc  newtonian.h  norsand.h  norsand.tcc  rigid.h  rigid.tcc
include/matrix/: assembler_base.h  assembler_eigen_semi_implicit_twophase.h  assembler_eigen_semi_implicit_twophase.tcc  cg_eigen.h  cg_eigen.tcc  solver_base.h
include/mesh/: cell.h  cell.tcc  mesh.h  mesh.tcc  node.h  node.tcc  node_base.h  node_threephase.tcc  node_twophase.tcc
include/particles/: Frozen_particle.h  Frozen_particle.tcc  Frozen_particle_unsaturated.h  MHBS_particle.h  MHBS_particle.tcc  frozen_particle.h  frozen_particle_unsaturated.h  frozen_particle_unsaturated.tcc  hydrate_particle.h  hydrate_particle.tcc  particle.h  particle.tcc  particle_base.h  threephase_particle.h  threephase_particle.tcc  twophase_particle.h  twophase_particle.tcc
include/solvers/: hydro_mpm_explicit.h  hydro_mpm_explicit.tcc  hydro_mpm_explicit_MHBS.h  hydro_mpm_explicit_MHBS.tcc  mpm.h  mpm_base.h  mpm_base.tcc  mpm_explicit_twophase.h  mpm_explicit_twophase.tcc  mpm_semi_implicit_twophase.h  mpm_semi_implicit_twophase.tcc  thermo_mpm_explicit.h  thermo_mpm_explicit.tcc  thermo_mpm_explicit_twophase.h  thermo_mpm_explicit_twophase.tcc  thermo_mpm_implicit.h  thermo_mpm_implicit.tcc  thermo_mpm_semi_implicit_twophase.h  thermo_mpm_with_phase_change.h  thermo_mpm_with_phase_change.tcc  thm_mpm_explicit_MHBS.h  thm_mpm_explicit_MHBS.tcc  thm_mpm_explicit_MHBS2.tcc  thm_mpm_explicit_sat_frozen.h  thm_mpm_explicit_sat_frozen.tcc  thm_mpm_explicit_threephase.h  thm_mpm_explicit_threephase.tcc  thm_mpm_explicit_twophase.h  thm_mpm_semi_implicit_sat_frozen.h  thm_mpm_semi_implicit_twophase.h  thm_mpm_semi_implicit_twophase.tcc  thm_mpm_semi_implicit_unsat_frozen.h  thm_mpm_semi_implicit_unsat_frozen.tcc  thm_mpm_semi_implicit_with_phase_change.h  thm_mpm_semi_implicit_with_phase_change.tcc  tm_mpm_explicit.h
include/solvers/dry_soil/: mpm_explicit.h  mpm_explicit.tcc  thermo_mpm_implicit.h  tm_mpm_explicit.h  tm_mpm_explicit.tcc
include/solvers/frozen_soil/: th_mpm_explicit_saturated_frozen.h  th_mpm_explicit_saturated_frozen.tcc  thm_mpm_explicit_saturated_frozen.h  thm_mpm_semi_implicit_saturated_frozen.h  thm_mpm_semi_implicit_saturated_frozen.tcc  thm_mpm_semi_implicit_unsaturated_frozen.h
include/solvers/hydrate_soil/: thc_mpm_explicit_hydrate.h  thc_mpm_explicit_hydrate.tcc  thmc_mpm_explicit_hydrate.h  thmc_mpm_explicit_hydrate.tcc
include/solvers/saturated_soil/: hm_mpm_explicit_twophase.h  hm_mpm_explicit_twophase.tcc  hm_mpm_semi_implicit_twophase.h  hm_mpm_semi_implicit_twophase.tcc  thm_mpm_explicit_twophase.h  thm_mpm_explicit_twophase.tcc  thm_mpm_semi_implicit_twophase.h  thm_mpm_semi_implicit_twophase.tcc
include/solvers/unsaturated_soil/: thm_mpm_explicit_threephase.h  thm_mpm_explicit_threephase.tcc
mpm/: .clang-format
src/: element.cc  hdf5_particle.cc  main.cc  main_mpmdem.cc  material.cc  matrix.cc  mpm.cc  mpm_wrapper.cc  node.cc  particle.cc
src/functions/: functions.cc  sin_function.cc  user_defined_function.cc
src/io/: logger.cc  vtk_writer.cc
